# assertpy2

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  codspeed.yml  docs.yml  mutation.yml  publish.yml  scorecard.yml  zizmor.yml
assertpy2/: __init__.py  _compare.py  _compat.py  _contract.py  _diff.py  _inline.py  _introspection.py  _matcher_impls.py  _mixin_base.py  _satisfies.py  _snapshot_codec.py  _typing.py  assertpy.py  async_assertions.py  base.py  behave_matchers.py  bytes_mixin.py  collection.py  contains.py  dataframe.py  date.py  dict.py  dynamic.py  errors.py  exception.py  extracting.py  file.py  helpers.py  json_mixin.py  matchers.py  numeric.py  pytest_plugin.py  snapshot.py  string.py  warning.py
assertpy2/_engine/: __init__.py  _compare.py  _contract.py  _diff.py  _introspection.py  _mixin_base.py  _typing.py
benchmarks/: test_perf.py
docs/: api.md  assertions.md  comparison.md  conf.py  data.md  errors.md  extending.md  fixup.py  fluent.md  getting-started.md  index.md  integrations.md  matchers.md  migration.md  recipes.md  testing.md  type-safety.md
docs/concepts/: type-safety.md
docs/extending/: custom-assertions.md  integrations.md
docs/getting-started/: comparison.md  migration.md  quickstart.md
docs/guides/: assertions.md  data.md  errors.md  fluent.md  matchers.md  testing.md
docs/reference/: async.md  bytes.md  collections.md  containment.md  core.md  dataframes.md  dates.md  dicts.md  dynamic.md  entry-points.md  errors.md  exceptions.md  extracting.md  files.md  json.md  matchers.md  numbers.md  overview.md  snapshots.md  strings.md  warnings.md
docs/stylesheets/: extra.css
tests/: conftest.py  test_async.py  test_attrs_support.py  test_behave_matchers.py  test_bool.py  test_boundary_cases.py  test_bytes.py  test_callable.py  test_chaining.py  test_class.py  test_collection.py  test_core.py  test_custom_dict.py  test_custom_list.py  test_dataframe.py  test_datetime.py  test_description.py  test_dict.py  test_dict_compare.py  test_docs_examples.py  test_dyn.py  test_dynamic.py  test_equals.py  test_errors.py  test_expected_exception.py  test_expected_warning.py  test_extensions.py  test_extracting.py  test_fail.py  test_file.py  test_grouped_soft.py  test_in.py  test_inline_record.py  test_inline_snapshot.py  test_iterable_cluster.py  test_json.py  test_list.py  test_matcher_registry.py  test_matchers.py  test_matchers_phase3.py  (+34 more)
