[project]
name = "assertpy2"
version = "2.5.0"
description = "Fluent assertion library for Python with composable matchers, structural matching, and full type safety"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Justin Shacklette", email = "justin@saturnboy.com" },
]
maintainers = [
    { name = "Solganis", email = "solganis.dev@gmail.com" },
]
keywords = ["test", "testing", "assert", "assertion", "assertthat", "assert_that", "pytest", "unittest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Solganis/assertpy2"
Repository = "https://github.com/Solganis/assertpy2"
Issues = "https://github.com/Solganis/assertpy2/issues"

[project.entry-points."pytest11"]
assertpy2 = "assertpy2.pytest_plugin"

[project.optional-dependencies]
allure = ["allure-pytest>=2.13"]
behave = ["behave>=1.2.6"]
json = ["jsonpath-ng>=1.8", "jsonschema>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "typing_extensions>=4.0",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:assertpy2"]

[tool.coverage.run]
branch = true
source = ["assertpy2"]

[tool.coverage.report]
omit = ["tests/*", "assertpy2/__init__.py", "assertpy2/_typing.py", "assertpy2/_compat.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "E301", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "SIM102", "SIM300"]
