[project]
name = "assertpy2"
version = "2.15.0"
description = "Fluent assertion library for Python with composable matchers, structural matching, and full type safety"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Justin Shacklette", email = "justin@saturnboy.com" },
]
maintainers = [
    { name = "Solganis", email = "solganis.dev@gmail.com" },
]
keywords = ["test", "testing", "assert", "assertion", "assertthat", "assert_that", "pytest", "unittest", "assertpy", "fluent", "matchers", "type-safe"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Solganis/assertpy2"
Repository = "https://github.com/Solganis/assertpy2"
Issues = "https://github.com/Solganis/assertpy2/issues"

[project.entry-points."pytest11"]
assertpy2 = "assertpy2.pytest_plugin"

[project.optional-dependencies]
allure = ["allure-pytest>=2.13"]
behave = ["behave>=1.2.6"]
data = ["assertpy2[numpy,pandas,polars]"]
inline = ["executing>=2.2", "asttokens>=2.0"]
json = ["jsonpath-ng>=1.8", "jsonschema>=4.18"]
numpy = ["numpy>=1.26"]
pandas = ["pandas>=2.0"]
polars = ["polars>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "ty>=0.0.57",
    "typing_extensions>=4.0",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-redirects>=1.2.3",
]
# Real third-party libraries the duck-typed integration paths are verified against in CI (the suite
# otherwise skips these tests); pandas/polars/numpy come from the [data] extra instead.
integrations = [
    "attrs>=25.0",
    "pydantic>=2.0",
    "requests>=2.32",
]
typecheck = [
    "mypy>=2.1.0",
    "pyright>=1.1.411",
]
mutation = [
    "cosmic-ray>=8.4.6",
]
docs-examples = [
    "pytest-examples>=0.0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-markers: unknown @pytest.mark.* is an error, not a silent typo.
addopts = ["-p", "no:assertpy2", "--strict-markers"]
xfail_strict = true  # an xfail that unexpectedly passes (xpass) fails the run
# Warnings are errors: a deprecation or runtime warning fails the run instead of
# scrolling past. The suite already passes clean under this; add targeted
# `"ignore::<Category>"` entries here only if a third-party warning forces it.
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["assertpy2"]

[tool.coverage.report]
omit = ["tests/*", "assertpy2/__init__.py", "assertpy2/_typing.py", "assertpy2/_compat.py"]

[tool.ruff]
# 120 feeds both `ruff format` and the E501 lint. Unlike black-style configs we do
# NOT disable E501 (see the empty `ignore` below): line length is a hard rule, not
# just a formatter hint, so the formatter and the linter agree at 120.
line-length = 120
target-version = "py310"  # lowest Python we support; UP rewrites target this floor

[tool.ruff.lint]
# Enable preview rules, but ONLY the ones named explicitly in `select`
# (explicit-preview-rules), so we can opt into a single preview rule (E301) without
# pulling in every unstable rule ruff ships behind the preview flag.
preview = true
explicit-preview-rules = true

# Curated set, not "ALL": each prefix is here on purpose. Plugin name + why we keep it.
select = [
    "E",     # pycodestyle errors
    "E301",  # pycodestyle, preview-gated: require a blank line between methods (not in stable "E")
    "F",     # Pyflakes - unused imports/names, undefined names
    "W",     # pycodestyle warnings
    "N",     # pep8-naming - naming conventions
    "I",     # isort - import ordering
    "UP",    # pyupgrade - modernize syntax to our py310+ floor
    "B",     # flake8-bugbear - likely bugs and footguns
    "A",     # flake8-builtins - don't shadow builtins
    "ASYNC", # flake8-async - async footguns (blocking calls, missing await) in async assertions/polling
    "C4",    # flake8-comprehensions - drop redundant list()/dict()/set() wrappers
    "PIE",   # flake8-pie - small idiom simplifications
    "PGH",   # pygrep-hooks - forbid blanket `noqa`/`type: ignore` (must name a rule code)
    "PLE",   # Pylint errors - real-error subset (not style)
    "SIM",   # flake8-simplify - collapse redundant constructs
    "T10",   # flake8-debugger - no committed breakpoint()/pdb calls
    "RUF",   # Ruff-specific rules
    "ERA",   # eradicate - no commented-out code
    "PERF",  # Perflint - performance anti-patterns
    "TC",    # flake8-type-checking - keep typing-only imports under TYPE_CHECKING
]

# Intentionally empty: nothing is globally ignored. In particular E501 stays ON
# (see line-length note above). Per-file relaxations go in per-file-ignores, not here.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests trade a few style rules for directness and literal fixtures:
"tests/*" = [
    "E741",    # ambiguous one-letter names (l/I/O) are fine in throwaway test locals
    "SIM102",  # keep nested `if`s when they read closer to the scenario under test
    "SIM300",  # allow Yoda-style literal-first comparisons in hand-written test data
    "A002",    # fixtures/helpers may take args named like builtins (id, type, filter, ...)
    "ERA001",  # example snippets deliberately left as comments in tests
]

[tool.ty.analysis]
# Suppressions must be ty-native `# ty: ignore[rule]`. Make ty disregard mypy's
# generic `# type: ignore` so a stray mypy-style comment can't silently mask a ty error.
respect-type-ignore-comments = false
